--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "multer": "^1.4.3",
     "multer-storage-cloudinary": "^4.0.0",
     "query-to-mongo": "^0.10.1",
-    "socket.io": "^4.3.2"
+    "socket.io": "^4.3.2",
+    "socketio-jwt": "^4.6.2"
   }
 }
